#322 Add fixed width and make component scrollable on x axis if there's an overflow

--- a/client/src/components/Privileges/Privileges.scss
+++ b/client/src/components/Privileges/Privileges.scss
@@ -1,5 +1,8 @@
-#privileges{
-  span{
+#privileges {
+  span {
     font-weight: bold;
   }
+  width: 350px;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
